// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`properties/person select user - cancel 1`] = `
<div>
  <div
    class="Person octo-propertyvalue css-b62m3t-container"
  >
    <span
      class="css-1f43avz-a11yText-A11yText"
      id="react-select-4-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="css-1f43avz-a11yText-A11yText"
    />
    <div
      class="react-select__control css-18140j1-Control"
    >
      <div
        class="react-select__value-container react-select__value-container--has-value css-433wy7-ValueContainer"
      >
        <div
          class="react-select__single-value css-1lixa2z-singleValue"
        >
          <div
            class="Person-item"
          >
            username-1
          </div>
        </div>
        <div
          class="react-select__input-container css-ox1y69-Input"
          data-value=""
        >
          <input
            aria-autocomplete="list"
            aria-expanded="false"
            aria-haspopup="true"
            autocapitalize="none"
            autocomplete="off"
            autocorrect="off"
            class="react-select__input"
            id="react-select-4-input"
            role="combobox"
            spellcheck="false"
            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
            tabindex="0"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
      >
        <div
          aria-hidden="true"
          class="react-select__indicator react-select__clear-indicator css-tpaeio-indicatorContainer"
        >
          <svg
            aria-hidden="true"
            class="css-tj5bde-Svg"
            focusable="false"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <path
              d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
            />
          </svg>
        </div>
        <span
          class="react-select__indicator-separator css-43ykx9-indicatorSeparator"
        />
        <div
          aria-hidden="true"
          class="react-select__indicator react-select__dropdown-indicator css-19sxey8-indicatorContainer"
        >
          <svg
            aria-hidden="true"
            class="css-tj5bde-Svg"
            focusable="false"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <path
              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`properties/person select user - cancel 2`] = `
<div>
  <div
    class="Person octo-propertyvalue css-b62m3t-container"
  >
    <span
      class="css-1f43avz-a11yText-A11yText"
      id="react-select-4-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="css-1f43avz-a11yText-A11yText"
    >
      <span
        id="aria-selection"
      />
      <span
        id="aria-context"
      >
        option username-4 focused, 1 of 2. 2 results available. Use Up and Down to choose options, press Enter to select the currently focused option, press Escape to exit the menu, press Tab to select the option and exit the menu.
      </span>
    </span>
    <div
      class="react-select__control react-select__control--is-focused react-select__control--menu-is-open css-18140j1-Control"
    >
      <div
        class="react-select__value-container react-select__value-container--has-value css-433wy7-ValueContainer"
      >
        <div
          class="react-select__single-value css-1lixa2z-singleValue"
        >
          <div
            class="Person-item"
          >
            username-1
          </div>
        </div>
        <div
          class="react-select__input-container css-ox1y69-Input"
          data-value=""
        >
          <input
            aria-autocomplete="list"
            aria-controls="react-select-4-listbox"
            aria-expanded="true"
            aria-haspopup="true"
            aria-owns="react-select-4-listbox"
            autocapitalize="none"
            autocomplete="off"
            autocorrect="off"
            class="react-select__input"
            id="react-select-4-input"
            role="combobox"
            spellcheck="false"
            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
            tabindex="0"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
      >
        <div
          aria-hidden="true"
          class="react-select__indicator react-select__clear-indicator css-13eygzs-indicatorContainer"
        >
          <svg
            aria-hidden="true"
            class="css-tj5bde-Svg"
            focusable="false"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <path
              d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
            />
          </svg>
        </div>
        <span
          class="react-select__indicator-separator css-43ykx9-indicatorSeparator"
        />
        <div
          aria-hidden="true"
          class="react-select__indicator react-select__dropdown-indicator css-hl9mox-indicatorContainer"
        >
          <svg
            aria-hidden="true"
            class="css-tj5bde-Svg"
            focusable="false"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <path
              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="react-select__menu css-10b6da7-menu"
      id="react-select-4-listbox"
    >
      <div
        class="react-select__menu-list css-g29tl0-MenuList"
      >
        <div
          class="react-select__group css-syji7d-Group"
        >
          <div
            class="react-select__group-heading css-18ng2q5-group"
            id="react-select-4-group-1-heading"
          >
            Not board members
          </div>
          <div>
            <div
              aria-disabled="false"
              class="react-select__option react-select__option--is-focused css-1bwtvog-option"
              id="react-select-4-option-1-0"
              tabindex="-1"
            >
              <div
                class="Person-item"
              >
                username-4
              </div>
            </div>
            <div
              aria-disabled="false"
              class="react-select__option css-nyiims-option"
              id="react-select-4-option-1-1"
              tabindex="-1"
            >
              <div
                class="Person-item"
              >
                username-5
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`properties/person select user - confirm 1`] = `
<div>
  <div
    class="Person octo-propertyvalue css-b62m3t-container"
  >
    <span
      class="css-1f43avz-a11yText-A11yText"
      id="react-select-2-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="css-1f43avz-a11yText-A11yText"
    />
    <div
      class="react-select__control css-18140j1-Control"
    >
      <div
        class="react-select__value-container react-select__value-container--has-value css-433wy7-ValueContainer"
      >
        <div
          class="react-select__single-value css-1lixa2z-singleValue"
        >
          <div
            class="Person-item"
          >
            username-1
          </div>
        </div>
        <div
          class="react-select__input-container css-ox1y69-Input"
          data-value=""
        >
          <input
            aria-autocomplete="list"
            aria-expanded="false"
            aria-haspopup="true"
            autocapitalize="none"
            autocomplete="off"
            autocorrect="off"
            class="react-select__input"
            id="react-select-2-input"
            role="combobox"
            spellcheck="false"
            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
            tabindex="0"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
      >
        <div
          aria-hidden="true"
          class="react-select__indicator react-select__clear-indicator css-tpaeio-indicatorContainer"
        >
          <svg
            aria-hidden="true"
            class="css-tj5bde-Svg"
            focusable="false"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <path
              d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
            />
          </svg>
        </div>
        <span
          class="react-select__indicator-separator css-43ykx9-indicatorSeparator"
        />
        <div
          aria-hidden="true"
          class="react-select__indicator react-select__dropdown-indicator css-19sxey8-indicatorContainer"
        >
          <svg
            aria-hidden="true"
            class="css-tj5bde-Svg"
            focusable="false"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <path
              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`properties/person select user - confirm 2`] = `
<div>
  <div
    class="Person octo-propertyvalue css-b62m3t-container"
  >
    <span
      class="css-1f43avz-a11yText-A11yText"
      id="react-select-2-live-region"
    />
    <span
      aria-atomic="false"
      aria-live="polite"
      aria-relevant="additions text"
      class="css-1f43avz-a11yText-A11yText"
    >
      <span
        id="aria-selection"
      />
      <span
        id="aria-context"
      >
        option username-4 focused, 1 of 2. 2 results available. Use Up and Down to choose options, press Enter to select the currently focused option, press Escape to exit the menu, press Tab to select the option and exit the menu.
      </span>
    </span>
    <div
      class="react-select__control react-select__control--is-focused react-select__control--menu-is-open css-18140j1-Control"
    >
      <div
        class="react-select__value-container react-select__value-container--has-value css-433wy7-ValueContainer"
      >
        <div
          class="react-select__single-value css-1lixa2z-singleValue"
        >
          <div
            class="Person-item"
          >
            username-1
          </div>
        </div>
        <div
          class="react-select__input-container css-ox1y69-Input"
          data-value=""
        >
          <input
            aria-autocomplete="list"
            aria-controls="react-select-2-listbox"
            aria-expanded="true"
            aria-haspopup="true"
            aria-owns="react-select-2-listbox"
            autocapitalize="none"
            autocomplete="off"
            autocorrect="off"
            class="react-select__input"
            id="react-select-2-input"
            role="combobox"
            spellcheck="false"
            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
            tabindex="0"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
      >
        <div
          aria-hidden="true"
          class="react-select__indicator react-select__clear-indicator css-13eygzs-indicatorContainer"
        >
          <svg
            aria-hidden="true"
            class="css-tj5bde-Svg"
            focusable="false"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <path
              d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
            />
          </svg>
        </div>
        <span
          class="react-select__indicator-separator css-43ykx9-indicatorSeparator"
        />
        <div
          aria-hidden="true"
          class="react-select__indicator react-select__dropdown-indicator css-hl9mox-indicatorContainer"
        >
          <svg
            aria-hidden="true"
            class="css-tj5bde-Svg"
            focusable="false"
            height="20"
            viewBox="0 0 20 20"
            width="20"
          >
            <path
              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="react-select__menu css-10b6da7-menu"
      id="react-select-2-listbox"
    >
      <div
        class="react-select__menu-list css-g29tl0-MenuList"
      >
        <div
          class="react-select__group css-syji7d-Group"
        >
          <div
            class="react-select__group-heading css-18ng2q5-group"
            id="react-select-2-group-1-heading"
          >
            Not board members
          </div>
          <div>
            <div
              aria-disabled="false"
              class="react-select__option react-select__option--is-focused css-1bwtvog-option"
              id="react-select-2-option-1-0"
              tabindex="-1"
            >
              <div
                class="Person-item"
              >
                username-4
              </div>
            </div>
            <div
              aria-disabled="false"
              class="react-select__option css-nyiims-option"
              id="react-select-2-option-1-1"
              tabindex="-1"
            >
              <div
                class="Person-item"
              >
                username-5
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
